fix article and color and font-sixe and latter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
     --special-color-text: rgba(255, 255, 255, 0.6);
     --primary-font: 'Roboto', sans-serif;
     --secondary-font: 'Raleway', sans-serif;
+    --header-logo-color: #000000; 
 
 }
 
@@ -48,14 +49,15 @@ body {
     font-family: var(--primary-font);
     color: var(--main-text-color);
     background-color: var(--main-fon-color);
+    font-size: 14px;
+    letter-spacing: 0.03em;
 }
 .header-logo{
 font-family: var(--secondary-font);
 font-weight: 700;
 font-size: 26px;
 line-height: 1.19;
-letter-spacing: 0.03em;
-color: #000000;
+color: var(--header-logo-color);
 
 }
 .logo-word{
@@ -64,7 +66,6 @@ color: #000000;
 
 .menu-link{
 font-weight: 500;
-font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--main-text-color);
@@ -75,7 +76,6 @@ color: var(--accent-color);
 }
 .mail-link{
 font-weight: 500;
-font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--additional-text-color);
@@ -86,7 +86,6 @@ color: var(--additional-text-color);
 }
 .phone-link{
 font-weight: 500;
-font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--additional-text-color);
@@ -133,15 +132,21 @@ background-color: var(--btn-accent-color);
 font-weight: 700;
 font-size: 14px;
 line-height: 1.14;
-letter-spacing: 0.03em;
 text-transform: uppercase;
+letter-spacing:0.03em;
 }
 
 .advantage-paragraph{
-font-size: 14px;
 line-height:1.7;
-letter-spacing: 0.03em;
 color: var(--additional-text-color);
+}
+
+.advantage-title{
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+letter-spacing:1.14;
+text-transform: uppercase;
 }
 
 .work-line{
@@ -149,7 +154,6 @@ font-weight: 700;
 font-size: 36px;
 line-height: 1.16;
 text-align: center;
-letter-spacing: 0.03em;
 }
 
 .team{
@@ -164,7 +168,6 @@ font-weight:700;
 font-size: 36px;
 line-height: 1.16;
 text-align: center;
-letter-spacing: 0.03em;
 }
 
 .employee-name{
@@ -172,15 +175,12 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.18;
 text-align: center;
-letter-spacing: 0.03em;
-
 }
 
 .job-title{
 font-size: 16px;
 line-height: 1.18;
 text-align: center;
-letter-spacing: 0.03em;
 color: var(--additional-text-color);
 }
 
@@ -194,7 +194,6 @@ font-family: var(--secondary-font);
 font-weight: 700;
 font-size: 26px;
 line-height: 1.19;
-letter-spacing: 0.03em;
 color: var(--secondary-text-color);
 }
 .word-logo{
@@ -207,28 +206,24 @@ font-style:normal;
 }
 
 .contact-address{
-font-size: 14px;
 line-height:1.7;
-letter-spacing: 0.03em;
 color: var(--secondary-text-color);
 }
 
 .contact-address:hover,
 .contact-address:focus{
-    color: var(--accent-color);
+color: var(--accent-color);
 }
 .email-address,
 .mob-tel{
-font-size: 14px;
 line-height: 1.7;  
-letter-spacing: 0.03em;
 color: var(--special-color-text)
 }
 .email-address:hover,
 .mob-tel:hover,
 .email-address:focus,
 .mob-tel:focus{
-    color: var(--accent-color);
+color: var(--accent-color);
 }
 
 .portfolio-hero{
@@ -242,14 +237,13 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.6;
 text-align: center;
-letter-spacing: 0.03em;
 background-color: var(--additional-fon-color);
 }
 
 .btn-items:hover,
 .btn-items:focus{
-    background-color: var(--accent-color);
-    color: var(--secondary-text-color);
+background-color: var(--accent-color);
+color: var(--secondary-text-color);
 }
 
 .portfolio-title{
@@ -262,6 +256,5 @@ letter-spacing: 0.06em;
 .portfolio-article{
 font-size: 16px;
 line-height: 1.8;
-letter-spacing: 0.03em;
 color: var(--additional-text-color);
 }
